<resources>
    <string name="app_name">Shocking News</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="business">Business</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_connection_available">No connection available</string>
    <string name="no_news_found">No news found</string>
    <string name="title_placeholder">Title</string>
    <string name="substitle_placeholder">substitle</string>
    <string name="author_placeholder">author</string>
    <string name="date_placeholder">date</string>
    <string name="news_image">News Image</string>
</resources>
