<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/main_card_margin_horizontal"
    android:layout_marginTop="@dimen/main_card_margin_vertical"
    android:layout_marginEnd="@dimen/main_card_margin_horizontal"
    android:layout_marginBottom="@dimen/main_card_margin_vertical"
    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
    card_view:cardElevation="@dimen/card_recycler_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/politics_img_main_card_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/news_image"
            android:scaleType="centerCrop"
            android:src="@drawable/business" />

        <TextView
            android:id="@+id/politics_tv_card_main_1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/politics_img_main_card_1"
            android:layout_marginStart="@dimen/card_title_margin"
            android:layout_marginTop="@dimen/card_title_margin_top"
            android:layout_marginEnd="@dimen/card_title_margin"
            android:ellipsize="end"
            android:fontFamily="@font/rosario_bold"
            android:maxLines="2"
            android:text="@string/title_placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/card_title_text_size" />

        <TextView
            android:id="@+id/politics_tv_card_main1_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/politics_tv_card_main_1_title"
            android:layout_marginStart="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:layout_marginEnd="@dimen/card_subtitle_margin"
            android:layout_marginBottom="@dimen/card_subtitle_margin"
            android:ellipsize="end"
            android:fontFamily="@font/rosario_italic"
            android:maxLines="3"
            android:text="@string/substitle_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/politics_tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/politics_tv_card_main1_subtitle"
            android:layout_marginStart="@dimen/card_subtitle_margin"
            android:layout_marginTop="@dimen/card_button_margin"
            android:layout_marginBottom="@dimen/card_button_margin_bottom"
            android:text="@string/author_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/politics_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/politics_tv_card_main1_subtitle"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/card_button_margin"
            android:layout_marginEnd="@dimen/card_subtitle_margin"
            android:layout_marginBottom="@dimen/card_button_margin_bottom"
            android:text="@string/date_placeholder" />


    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>